--- a/app/src/main/res/layout/activity_atur_parts.xml
+++ b/app/src/main/res/layout/activity_atur_parts.xml
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -63,7 +62,8 @@
                         android:id="@+id/et_noPart_part"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:enabled="false"
+                        android:editable="false"
+                        android:textSize="14sp"
                         android:hint="NO. PART"
                         android:singleLine="true" />
 
@@ -86,11 +86,10 @@
                         android:id="@+id/et_namaPart_part"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:enabled="false"
+                        android:editable="false"
+                        android:textSize="14sp"
                         android:hint="NAMA PART"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:singleLine="true" />
+                        android:inputType="textEmailAddress" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -112,11 +111,9 @@
                         android:id="@+id/et_merk_part"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:enabled="false"
-                        android:hint="MERK"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:singleLine="true" />
+                        android:editable="false"
+                        android:textSize="14sp"
+                        android:hint="MERK" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -136,7 +133,8 @@
                         android:id="@+id/et_status_part"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:enabled="false"
+                        android:editable="false"
+                        android:textSize="14sp"
                         android:hint="STATUS" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -160,9 +158,8 @@
                         android:layout_height="wrap_content"
                         android:enabled="false"
                         android:hint="WAKTU GANTI"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:singleLine="true" />
+                        android:editable="false"
+                        android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -185,9 +182,8 @@
                         android:layout_height="wrap_content"
                         android:enabled="false"
                         android:hint="HET"
-                        android:inputType="textEmailAddress"
-                        android:maxLines="1"
-                        android:singleLine="true" />
+                        android:editable="false"
+                        android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -204,6 +200,7 @@
                         android:id="@+id/et_stockTersedia_part"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textSize="14sp"
                         android:hint="STOCK TERSEDIA" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -223,6 +220,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="number"
+                        android:textSize="14sp"
                         android:hint="WAKTU PESAN (HARI)"
                         android:maxLength="2" />
 
@@ -243,6 +241,7 @@
                         android:layout_height="wrap_content"
                         android:hint="STOCK MINIMUM"
                         android:inputType="numberDecimal"
+                        android:textSize="14sp"
                         android:maxLength="7" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -288,8 +287,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="MARGIN / HARGA"
-                        android:maxLines="1"
-                        android:singleLine="true"
+                        android:textSize="14sp"
                         android:maxLength="4" />
 
                 </android.support.design.widget.TextInputLayout>
