--- a/app/src/main/res/layout/activity_atur_penjualan_part_.xml
+++ b/app/src/main/res/layout/activity_atur_penjualan_part_.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,6 +30,7 @@
                     android:id="@+id/et_jenisKendaraan_jualPart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="14sp"
                     android:inputType="text" />
 
             </android.support.design.widget.TextInputLayout>
@@ -48,6 +48,8 @@
                     android:id="@+id/et_noPhone_jualPart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:maxLength="14"
                     android:inputType="phone" />
 
             </android.support.design.widget.TextInputLayout>
@@ -65,7 +67,8 @@
                     android:id="@+id/et_namaPelanggan_jualPart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text" />
+                    android:textSize="14sp"
+                    android:inputType="textPersonName" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -83,7 +86,8 @@
                     android:id="@+id/et_namaUsaha_jualPart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text" />
+                    android:textSize="14sp"
+                    android:inputType="textPersonName" />
 
             </android.support.design.widget.TextInputLayout>
 
