--- a/app/src/main/res/layout/activity_detail_jual_part_.xml
+++ b/app/src/main/res/layout/activity_detail_jual_part_.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,7 +31,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:enabled="false" />
+                    android:editable="false"
+                    android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -49,6 +49,7 @@
                     android:id="@+id/et_hargaJual_detailPart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textSize="14sp"
                     android:inputType="numberDecimal" />
 
             </android.support.design.widget.TextInputLayout>
@@ -67,7 +68,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:enabled="false" />
+                    android:textSize="14sp"
+                    android:editable="false" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -85,7 +87,8 @@
                     android:id="@+id/et_jumlah_detailPart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
 
