--- a/app/src/main/res/layout/activity_pembayaran_.xml
+++ b/app/src/main/res/layout/activity_pembayaran_.xml
@@ -2,8 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -33,6 +33,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:textSize="14sp"
                     android:hint="TOTAL"
                     android:inputType="number" />
 
@@ -105,6 +106,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ems="10"
+                        android:textSize="14sp"
                         android:hint="NO. TRACK"
                         android:inputType="number" />
 
@@ -149,6 +151,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ems="10"
+                        android:textSize="14sp"
                         android:hint="NO. REKENING"
                         android:inputType="number" />
 
@@ -170,6 +173,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:ems="10"
+                        android:textSize="14sp"
                         android:hint="BIAYA TRANSFER"
                         android:inputType="number" />
 
