--- a/app/src/main/res/layout/find_nama_.xml
+++ b/app/src/main/res/layout/find_nama_.xml
@@ -2,12 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="?attr/selectableItemBackground"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_margin="5dp"
         app:cardCornerRadius="6dp"
-        app:cardElevation="3dp"
+        app:cardElevation="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
